--- a/Introduction to Python Answers.ipynb
+++ b/Introduction to Python Answers.ipynb
@@ -94,7 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assign the variable `tagline` to the string \"Hitachi, Inspire the Next\", then print this variable"
+    "Assign the string \"Hitachi, Inspire the Next\" to the variable `tagline`, then print this variable"
    ]
   },
   {
@@ -765,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Have a go at defining a function that multiplies two numbers together and prints the result.  \n",
+    "Have a go at defining a function that multiplies two numbers together, adds 5, and prints the result.  \n",
     "Then call it with some numbers to test it out."
    ]
   },
@@ -778,17 +778,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "81\n"
+      "11\n",
+      "86\n"
      ]
     }
    ],
    "source": [
-    "def multiply(x, y):\n",
-    "    print (x * y)\n",
+    "def multiply_and_add_5(x, y):\n",
+    "    z = (x * y) + 5\n",
+    "    print (z)\n",
     "\n",
-    "multiply(3, 2)\n",
-    "multiply(9, 9)"
+    "multiply_and_add_5(3, 2)\n",
+    "multiply_and_add_5(9, 9)"
    ]
   },
   {
@@ -1259,7 +1260,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The HQ for Hitachi Consulting is Harmsworth House, London\n"
+      "The UK HQ for Hitachi Consulting is Harmsworth House, London\n"
      ]
     }
    ],
@@ -1278,7 +1279,7 @@
     "my_fave_hitachi_company = 'Hitachi Consulting'\n",
     "\n",
     "if my_fave_hitachi_company in hqs:\n",
-    "    print(\"The HQ for {} is {}\".format(my_fave_hitachi_company, hqs[my_fave_hitachi_company]))\n",
+    "    print(\"The UK HQ for {} is {}\".format(my_fave_hitachi_company, hqs[my_fave_hitachi_company]))\n",
     "else:\n",
     "    print(\"Sorry I don't have the HQ for {}\")"
    ]
@@ -1626,7 +1627,143 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises"
+    "#### List comprehensions\n",
+    "\n",
+    "If we have a list defined as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "my_list = [1, 4, 5, 7, 8, 10, 12, 15, 16, 20, 24, 28, 30, 35, 38]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of doing the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 5, 7, 15, 35]"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odd_numbers_from_my_list = []\n",
+    "for i in my_list:\n",
+    "    if i % 2 == 1:\n",
+    "        odd_numbers_from_my_list.append(i)\n",
+    "        \n",
+    "odd_numbers_from_my_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can write:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 5, 7, 15, 35]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odd_numbers_from_my_list = [i for i in my_list if i % 2 == 1]\n",
+    "\n",
+    "odd_numbers_from_my_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a list comprehension that does the same as the following statement:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[64, 512, 1000, 1728, 4096, 8000, 13824, 21952, 27000, 54872]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cubed_even_numbers = []\n",
+    "\n",
+    "for i in my_list:\n",
+    "    if i % 2 == 0:\n",
+    "        cubed_even_numbers.append(i ** 3)\n",
+    "\n",
+    "cubed_even_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[64, 512, 1000, 1728, 4096, 8000, 13824, 21952, 27000, 54872]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cubed_even_numbers = [i ** 3 for i in my_list if i % 2 == 0]\n",
+    "\n",
+    "cubed_even_numbers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section 4 - Exercises"
    ]
   },
   {
@@ -1646,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 62,
    "metadata": {
     "collapsed": true
    },
@@ -1659,7 +1796,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -1694,7 +1831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 64,
    "metadata": {
     "collapsed": true
    },
@@ -1709,7 +1846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1745,7 +1882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "metadata": {
     "collapsed": true
    },
@@ -1757,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1790,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -1803,7 +1940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1839,7 +1976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "metadata": {
     "collapsed": true
    },
@@ -1855,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -1893,7 +2030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {
     "collapsed": true
    },
@@ -1907,7 +2044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1942,7 +2079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -1958,7 +2095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -1992,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 76,
    "metadata": {
     "collapsed": true
    },
@@ -2016,7 +2153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2052,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
@@ -2070,7 +2207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -2104,7 +2241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 80,
    "metadata": {
     "collapsed": true
    },
@@ -2120,7 +2257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -2155,7 +2292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modules"
+    "## Section 5 - Modules"
    ]
   },
   {
@@ -2167,7 +2304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -2192,7 +2329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -2218,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2227,7 +2364,7 @@
        "-1.0"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2241,22 +2378,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The random module has a function randint.  \n",
+    "The random module has a function randint which takes in two parameters, a lower integer and an upper integer and returns an integer between those two numbers (inclusive).\n",
+    "\n",
+    "\n",
     "Use the randint function to roll a six-sided die and a 10-sided die and add the results together"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "10"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2270,7 +2409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dates and Times"
+    "## Section 6 - Dates and Times"
    ]
   },
   {
@@ -2284,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -2293,7 +2432,7 @@
        "datetime.date(2017, 9, 19)"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2313,7 +2452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -2322,7 +2461,7 @@
        "datetime.datetime(2017, 12, 25, 4, 0)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2334,7 +2473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -2343,7 +2482,7 @@
        "datetime.datetime(2017, 1, 1, 1, 0)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2355,7 +2494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -2364,7 +2503,7 @@
        "datetime.datetime(2012, 4, 23, 3, 4, 24)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2376,7 +2515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -2385,7 +2524,7 @@
        "datetime.datetime(2014, 12, 31, 13, 34)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2397,7 +2536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -2406,7 +2545,7 @@
        "datetime.datetime(2015, 10, 1, 10, 3, 10)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2426,7 +2565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 92,
    "metadata": {
     "collapsed": true
    },
@@ -2437,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -2446,7 +2585,7 @@
        "'2010/04/05 17:11:54'"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2458,7 +2597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
@@ -2467,7 +2606,7 @@
        "'17:11:54 on 5 April 2010'"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2479,7 +2618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -2488,7 +2627,7 @@
        "'2010-04-05T17:11:54'"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2500,7 +2639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
@@ -2509,7 +2648,7 @@
        "'5:11:54 PM'"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2521,7 +2660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -2530,7 +2669,7 @@
        "'Monday'"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2553,7 +2692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -2580,16 +2719,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2017, 4, 20, 14, 20, 57, 53157)"
+       "datetime.datetime(2017, 5, 24, 8, 42, 6, 226578)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2609,14 +2748,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1571\n"
+      "1605\n"
      ]
     }
    ],
@@ -2639,7 +2778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -2680,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -2694,6 +2833,8 @@
     "    time_now = datetime.datetime.utcnow()\n",
     "    in_three_seconds = time_now + datetime.timedelta(seconds=3)\n",
     "    print(datetime.datetime.strftime(in_three_seconds, \"At the beep the time will be %H:%M and %S seconds\"))\n",
+    "    # This line is required to print the first line\n",
+    "    # Otherwise the output will be cached and all returned at once\n",
     "    sys.stdout.flush()\n",
     "    time.sleep(3)\n",
     "    print(\"Beep!\")"
@@ -2701,14 +2842,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "At the beep the time will be 14:21 and 00 seconds\n",
+      "At the beep the time will be 08:42 and 09 seconds\n",
       "Beep!\n"
      ]
     }
