--- a/Introduction to Python.ipynb
+++ b/Introduction to Python.ipynb
@@ -73,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assign the variable `tagline` to the string \"Hitachi, Inspire the Next\", then print this variable"
+    "Assign the string \"Hitachi, Inspire the Next\" to the variable `tagline`, then print this variable"
    ]
   },
   {
@@ -545,7 +545,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Have a go at defining a function that multiplies two numbers together and prints the result.  \n",
+    "Have a go at defining a function that multiplies two numbers together, adds 5, and prints the result.  \n",
     "Then call it with some numbers to test it out."
    ]
   },
@@ -919,7 +919,7 @@
     "my_fave_hitachi_company = \n",
     "\n",
     "if my_fave_hitachi_company in hqs:\n",
-    "    print(\"The HQ for {} is {}\".format(my_fave_hitachi_company, hqs[my_fave_hitachi_company]))\n",
+    "    print(\"The UK HQ for {} is {}\".format(my_fave_hitachi_company, hqs[my_fave_hitachi_company]))\n",
     "else:\n",
     "    print(\"Sorry I don't have the HQ for {}\")"
    ]
@@ -1139,14 +1139,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Exercises"
+    "#### List comprehensions\n",
+    "\n",
+    "If we have a list defined as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "my_list = [1, 4, 5, 7, 8, 10, 12, 15, 16, 20, 24, 28, 30, 35, 38]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__For each of the exercises below, carry out the instructions then try out your functions with the test cases given and make sure you don't get an assertion error__"
+    "Instead of doing the following:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "odd_numbers_from_my_list = []\n",
+    "for i in my_list:\n",
+    "    if i % 2 == 1:\n",
+    "        odd_numbers_from_my_list.append(i)\n",
+    "        \n",
+    "odd_numbers_from_my_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can write:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "odd_numbers_from_my_list = [i for i in my_list if i % 2 == 1]\n",
+    "\n",
+    "odd_numbers_from_my_list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a list comprehension that does the same as the following statement:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cubed_even_numbers = []\n",
+    "\n",
+    "for i in my_list:\n",
+    "    if i % 2 == 0:\n",
+    "        cubed_even_numbers.append(i ** 3)\n",
+    "\n",
+    "cubed_even_numbers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Section 4 - Exercises"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__For each of the exercises below, carry out the instructions then try out your functions with the test cases given and make sure you don't get an assertion error and check that the test cases pass.__ \n",
+    "\n",
+    "__If you do get an error or the tests fail, try again.__"
    ]
   },
   {
@@ -1383,11 +1481,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -1548,7 +1641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Modules"
+    "## Section 5 -  Modules"
    ]
   },
   {
@@ -1593,7 +1686,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Have a go at importing `cos` and `pi` from the math module\n",
+    "Have a go at importing `cos` and `pi` from the math module.\n",
+    "\n",
     "Print the cosine of pi"
    ]
   },
@@ -1610,7 +1704,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The random module has a function randint.  \n",
+    "The random module has a function randint which takes in two parameters, a lower integer and an upper integer and returns an integer between those two numbers (inclusive).\n",
+    "\n",
+    "\n",
     "Use the randint function to roll a six-sided die and a 10-sided die and add the results together"
    ]
   },
@@ -1627,7 +1723,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dates and Times"
+    "## Section 6 -  Dates and Times"
    ]
   },
   {
