Add first 4 additional exercises

--- a/additional_exercises/1. Data types.ipynb
+++ b/additional_exercises/1. Data types.ipynb
@@ -13,7 +13,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = 4\n",
@@ -23,7 +25,9 @@
     "e = {'a': a, 'b': b, 'c': c}\n",
     "f = (a, b, c)\n",
     "g = {a, b, c}\n",
-    "h = print"
+    "h = print\n",
+    "i = True\n",
+    "j = None"
    ]
   },
   {
@@ -36,7 +40,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Type of variable `a`\n",
@@ -118,6 +124,28 @@
    "outputs": [],
    "source": [
     "# Type of variable `h`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Type of variable `i`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Type of variable `j`\n"
    ]
   },
   {
@@ -220,7 +248,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
