Update NumPy Arrays exercises to include correlations

--- a/additional_exercises/Answers - 4. Numpy Arrays.ipynb
+++ b/additional_exercises/Answers - 4. Numpy Arrays.ipynb
@@ -4,11 +4,369 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Calculate Correlation between two datasets\n",
+    "\n",
+    "Let's say we have two data sets, $x$ and $y$, and we want to determine whether there is a correlation between the two datasets.\n",
+    "\n",
+    "We'll start by calculating the means and standard deviations of these two data sets.\n",
+    "\n",
+    "#### Calculate the mean\n",
+    "\n",
+    "The mean of a variable is calculated as:\n",
+    "\n",
+    "$$ \\bar{x} = \\dfrac{1}{n} \\sum_{i=1}^n{x_i} $$\n",
+    "\n",
+    "So let's start by calculating the means of two sample variables x and y. Remember you can use `np.sum()` to calculate the sum of a numpy array and `len()` to calculate the length of an array."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.24\n",
+      "2.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "x = np.array([2.3, 2.5, 1.9, 2.4, 2.1])\n",
+    "y = np.array([1.3, 5.0, 0.8, 1.9, 1.1])\n",
+    "\n",
+    "x_bar = np.sum(x) / len(x)\n",
+    "y_bar = np.sum(y) / len(y)\n",
+    "\n",
+    "print(x_bar)\n",
+    "print(y_bar)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In future, you can use `np.mean()` to calculate the mean of an array. Use `np.mean()` and see if you get the same output as above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.24\n",
+      "2.02\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.mean(x))\n",
+    "print(np.mean(y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calulate the Variance\n",
+    "\n",
+    "Variance measures how much a single variable deviates from its mean. The variance is calculated as:\n",
+    "\n",
+    "$$ s^2 = \\dfrac{1}{n-1} \\sum_{i=1}^n(x_i - \\bar{x})^2$$\n",
+    "\n",
+    "Where:\n",
+    "* $\\bar{x}$ is the mean of your sample variable $x$, as calculated above\n",
+    "\n",
+    "Use the cell below to calculate the variances of $x$ and $y$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.058\n",
+      "2.937\n"
+     ]
+    }
+   ],
+   "source": [
+    "var_x = np.sum((x - x_bar) ** 2) / (len(x) - 1)\n",
+    "var_y = np.sum((y - y_bar) ** 2) / (len(y) - 1)\n",
+    "\n",
+    "print(var_x)\n",
+    "print(var_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate the Standard Deviation\n",
+    "\n",
+    "The standard devation is the square root of the variance. It is measured in the same units as the mean is so provides an easy to understand, direct comparison with the mean.\n",
+    "\n",
+    "It is caluclated as:\n",
+    "\n",
+    "$$ s = \\sqrt{s^2} $$\n",
+    "\n",
+    "You can use `np.sqrt()` to get the square root of a value (or the square root of each element in a numpy array if that's what you pass it as a parameter).\n",
+    "\n",
+    "Use the cell below to calculate the standard deviation of $x$ and $y$:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.240831891576\n",
+      "1.7137677789\n"
+     ]
+    }
+   ],
+   "source": [
+    "std_x = np.sqrt(var_x)\n",
+    "std_y = np.sqrt(var_y)\n",
+    "\n",
+    "print(std_x)\n",
+    "print(std_y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In future, you can use `np.std()` to calculate the standard deviation of an array.\n",
+    "\n",
+    "Use `np.std()` and see if you get the same output as above."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.215406592285\n",
+      "1.53284050051\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.std(x))\n",
+    "print(np.std(y))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that you don't get the same answers, this is because the default for `np.std()` is to calculate the standard deviation for a population, not a sample from the population. A sample has one fewer degrees of freedom, so you need to provide an extra parameter to the function. A fuller explanation of this can be found [here](http://nebula.deanza.edu/~bloom/math10/m10divideby_nminus1.pdf).\n",
+    "\n",
+    "Call `np.std()`, this time with two parameters, a positional argument of your array and named argument `ddof` of 1 e.g. `np.std(x, ddof=1)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.240831891576\n",
+      "1.7137677789\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.std(x, ddof=1))\n",
+    "print(np.std(y, ddof=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate the covariance\n",
+    "\n",
+    "We now calculate the covariance of the datasets. Whereas variance measures how much a single variable deviates from its mean, covariance measures how two variables deviate in tandem from their respective means.\n",
+    "\n",
+    "Covariance is calculated as:\n",
+    "\n",
+    "$$ COV_{(x, y)} = \\dfrac{1}{n-1} \\sum_{i=1}^n{(x_i - \\bar{x})(y_i - \\bar{y})} $$\n",
+    "\n",
+    "Where:\n",
+    "* $\\bar{x}$ is the mean of the $x$ variable, as calculated above\n",
+    "* $\\bar{y}$ is the mean of the $y$ variable, as calculated above\n",
+    "* n is the number of observations\n",
+    "\n",
+    "Use the cell below to calculate covariance:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.314\n"
+     ]
+    }
+   ],
+   "source": [
+    "covariance = np.sum((x - x_bar) * (y - y_bar)) / (len(x) - 1)\n",
+    "\n",
+    "print(covariance)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Calculate the correlation\n",
+    "\n",
+    "Correlation is a regularised measure of how two variables are related. The resulting value is between -1 and 1, with -1 indicating a strong negative correlation, 1 indicating a strong positive correlation and 0 indicating no strong correlation.\n",
+    "\n",
+    "Correlation is calculated as:\n",
+    "\n",
+    "$$ r_{(x, y)} = \\dfrac{COV_{(x, y)}}{s_x s_y} $$\n",
+    "\n",
+    "Where:\n",
+    "* $COV_{(x, y)}$ is the covariance of variables x and y, as calculated above\n",
+    "* $s_x$ is the standard deviation of x, as calculated above\n",
+    "* $s_y$ is the standard deviation of y, as calculated above\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.760788042438\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = covariance / (std_x * std_y)\n",
+    "\n",
+    "print(r)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Numpy provides in-built functions to calculate the correlation and covariance.\n",
+    "\n",
+    "The covariance function `np.cov()` returns a covariance matrix of:\n",
+    "\n",
+    "$$ \\begin{bmatrix} COV_{(x, x)} & COV_{(x, y)} \\\\ COV_{(y, x)} & COV_{(y, y)} \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "Try using `np.cov()`, passing `x` and `y` as parameters and see what the output is, how does this compare with your calculation of covariance?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.058,  0.314],\n",
+       "       [ 0.314,  2.937]])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.cov(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Just with covariance, the correlation coefficient function `np.corrcoef()` returns a correlation matrix of:\n",
+    "\n",
+    "$$ \\begin{bmatrix} r_{(x, x)} & r_{(x, y)} \\\\ r_{(y, x)} & r_{(y, y)} \\\\ \\end{bmatrix}$$\n",
+    "\n",
+    "Try using `np.corrcoef()`, passing `x` and `y` as parameters and see what the output is.   \n",
+    "How does this compare with your calculation of correlation?   \n",
+    "What is the value of $r_{(x, x)}$ and $r_{(y, y)}$, why do you think that might be?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.        ,  0.76078804],\n",
+       "       [ 0.76078804,  1.        ]])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.corrcoef(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Measuring Regression Model Performance\n",
     "\n",
     "Regression machine learning models are used to predict continuous variables.\n",
     "\n",
-    "The sum of squared errors is a common way of measuring the performance of a regression machine learning model.\n",
+    "In order to determine how well your model performs, you could just sum up how far away each prediction of y ($\\hat{y}_i$) was from the observed y ($y_i$):\n",
+    "\n",
+    "$$ error = \\sum_{i=1}^N|{y_i - \\hat{y_i}|} $$\n",
+    "\n",
+    "However, for a number of reasons (described [here](https://www.benkuhn.net/squared) if you're interested) the squared error is used. This magnifies points that are further away from your model's prediction.\n",
+    "\n",
+    "The sum of squared errors is a common way of measuring the performance of a regression machine learning model and is often used as the function to optimise by these models.\n",
     "\n",
     "It is calculated as:\n",
     "\n",
@@ -23,14 +381,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
     "y_predict_1 = np.array([5, 10, 14, 15, 20, 14, 18, 19]) \n",
     "y_predict_2 = np.array([3, 9, 15, 18, 16, 21, 23, 26]) \n",
     "y_actual = ([4, 10, 16, 23, 18, 20, 22, 23])"
@@ -38,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +489,7 @@
        "4.5124036593367185"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +534,7 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +584,7 @@
        "-3.8205436973817402"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +628,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
