Add exercises for cleaning, transforming and merging data

--- a/additional_exercises/6. Vectorised functions.ipynb
+++ b/additional_exercises/6. Vectorised functions.ipynb
@@ -12,7 +12,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -61,7 +63,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -162,7 +166,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "tech_firms = pd.read_json('data/tech_firms.json')\n",
@@ -268,20 +274,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Cleaning Strings"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some people filled in a form with their first names, last names and heights. \n",
+    "### Superstore Sales\n",
     "\n",
-    "However the height field was a free text field and there was no error checking. Your job is to clean up these heights.\n",
-    "\n",
-    "All the heights are given in metric but the string formats are different\n",
-    "\n",
-    "Run the cell below to see the table."
+    "Tableau provide a sample data set named \"Superstore Sales\". Load this data set and print the first 5 rows in by running the cell below."
    ]
   },
   {
@@ -290,40 +285,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "heights = pd.DataFrame([\n",
-    "    {\"first_name\": \"Stephanie\", \"last_name\": \"Bambery\", \"height\": \"1.60 metres\"},\n",
-    "    {\"first_name\": \"Barnard\", \"last_name\": \"Darbey\", \"height\": '1m 80cm'},\n",
-    "    {\"first_name\": \"Gale\", \"last_name\": \"Blind\", \"height\": \"154\"},\n",
-    "    {\"first_name\": \"Corry\", \"last_name\": \"Erbe\", \"height\": \"1 meter 80\"},\n",
-    "    {\"first_name\": \"Godard\", \"last_name\": \"Haslam\", \"height\": \"170 cm\"},\n",
-    "    {\"first_name\": \"Raimundo\", \"last_name\": \"Pelman\", \"height\": \"172 cm\"}, \n",
-    "    {\"first_name\": \"Evvie\", \"last_name\": \"Rathke\", \"height\": \"165\"},\n",
-    "    {\"first_name\": \"Darius\", \"last_name\": \"Hymers\", \"height\": \"1.67 m\"}\n",
-    "], columns=['first_name', 'last_name', 'height'])\n",
-    "\n",
-    "heights"
+    "superstore_sales = pd.read_csv('data/superstore_sales.csv')\n",
+    "superstore_sales.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "They are currently strings but you would like them as floats in centimetres.\n",
-    "\n",
-    "Write a function that will read in all of these height strings, convert them to centimetres, strip out any non-digit characters and return a float.\n",
-    "\n",
-    "_Hint: have a look back at the presentation at all of the string transformation functions_\n",
-    "_This is not an easy problem, so you may want to look at the solution for help_"
+    "Use the `.describe()` method to describe the numeric columns"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Have a look at the summary statistics above and answer the following questions:\n",
+    "* Do any columns have any rows missing (Count less than the other columns)\n",
+    "* What is the mean profit for a row?\n",
+    "* What was the maximum discount (%) given to any customer?\n",
+    "* What is the median price paid for shipping?"
+   ]
   }
  ],
  "metadata": {
